--- a/setup/index.html
+++ b/setup/index.html
@@ -48,8 +48,8 @@
             <tr>
               <td class="xd">CPU</td>
               <td class="xd">
-                <a href="https://www.amd.com/en/products/cpu/amd-ryzen-7-5800x"
-                  >Ryzen 5 5600x</a
+                <a href="https://www.amd.com/en/products/cpu/amd-ryzen-7-5700x"
+                  >Ryzen 7 5700x</a
                 >
               </td>
               <td></td>
@@ -67,11 +67,11 @@
             <tr>
               <td class="xd">CPU Cooler</td>
               <td class="xd">
-                <a href="https://www.silentiumpc.com/en/product/fera-3-he1224/"
-                  >SilentiumPC Fera 3</a
+                <a href="https://www.x-kom.pl/p/700649-chlodzenie-procesora-silver-monkey-x-snowy-argb-240-2x120-mm.html"
+                  >Silver Monkey X SNOWY</a
                 >
               </td>
-              <td>It's cool 💀</td>
+              <td>its cool haha im dead 💀</td>
             </tr>
             <tr>
               <td class="xd">RAM</td>
