--- a/setup/index.html
+++ b/setup/index.html
@@ -122,8 +122,7 @@
                 >
               </td>
               <td>
-                Considering an upgrade but NVIDIA recommends 650W so I should be
-                fine
+                It's enough
               </td>
             </tr>
           </tbody>
@@ -164,11 +163,11 @@
               <td class="xd">Mouse</td>
               <td class="xd">
                 <a
-                  href="https://www.gloriousgaming.com/products/glorious-model-o-black"
-                  >Glorious Model O</a
+                  href="https://steelseries.com/gaming-mice/aerox-5-wireless"
+                  >SteelSeries Aerox 5 Wireless</a
                 >
               </td>
-              <td>Terrible don't buy pls</td>
+              <td>amazing</td>
             </tr>
             <tr>
               <td class="xd">Gamepad</td>
@@ -178,7 +177,7 @@
                   >Xbox Wireless Controller</a
                 >
               </td>
-              <td>Works awesome and out of the box with Windows</td>
+              <td>i use it to play non fps games 🤯</td>
             </tr>
             <tr>
               <td class="xd">Speakers</td>
@@ -200,7 +199,7 @@
                   >TP-Link UB500</a
                 >
               </td>
-              <td>Works well with galaxy buds2 and gamepads</td>
+              <td>Works well with like 4 connected devices</td>
             </tr>
           </tbody>
         </table>
