ready for rewrite

--- a/index.html
+++ b/index.html
@@ -1,141 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://pazdikan.party" />
-    <meta property="og:title" content="Pazdikan's website" />
-    <meta
-      property="og:description"
-      content="Pazdikan's personal website. Some about me, socials and more."
-    />
-    <meta
-      property="og:image"
-      content="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png"
-    />
-    <meta name="theme-color" content="#5e33ff" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="https://cdn.discordapp.com/icons/810605042481496105/b679012a817f5612f687a4b2f9987d1e.png"
-    />
-
-    <title>Home → pazdikan.party</title>
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.min.css"
-    />
-    <link rel="stylesheet" href="index.css" />
-    <script
-      src="https://kit.fontawesome.com/8322e271ac.js"
-      crossorigin="anonymous"
-    ></script>
-
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
-    <link
-  rel="stylesheet"
-  href="https://unpkg.com/tippy.js@6/animations/scale.css"
-/>
-  </head>
-  <body>
-    <div class="content">
-      <div id="top">
-        <div class="socials delayFadeIn">
-          <a href="https://www.github.com/pazdikan"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-
-        <a href="https://www.twitter.com/pazdikan"
-        > <i class="fa-brands fa-twitter"></i
-        ></a>
-
-        <a href="https://www.discord.gg/dXjUapMtsy"
-          ><i class="fa-brands fa-discord"></i
-        ></a>
-
-          <a href="https://steamcommunity.com/id/pazdikan"
-            ><i class="fa-brands fa-steam"></i
-          ></a>
-
-          <a href="https://25karma.xyz/player/8d24090147734d16b29ed881f8f1adc5"
-          ><i class="fa-solid fa-cube"></i></a>
-
-          <a href="https://www.youtube.com/c/pazdikan"
-            ><i class="fa-brands fa-youtube"></i
-          ></a>
-
-          <a href="https://www.twitch.tv/pazdikan"
-            ><i class="fa-brands fa-twitch"></i
-          ></a>
-        </div>
-        <h1 class="title">
-          Hi, I'm
-          <span class="name">Michał</span>!
-        </h1>
-        <p class="shortabout delayFadeIn">
-          Developer and gamer. Keep scrolling...
-        </p>
-
-        <i
-          class="
-            fa-solid fa-arrow-down
-            animate__animated animate__shakeY animate__delay-2s
-          "
-        ></i>
-      </div>
-      <div id="about">
-        <div class="about about-l">
-          <h1 class="small-title">I would love to work with you!</h1>
-          <p class="about-description-l">Contact me on Discord or Twitter (links at the top).</p>
-          If you need a spigot developer hit me up on Discord or Twitter. I can do whatever you want, price depends on the size of the plugin*<br>
-          *Not bytes, for example plugin with two commands don't cost as much as a whole custom minigame ;)
-        </div>
-
-
-        <div class="about about-r">
-          <h1 class="small-title">Projects I worked on.</h1>
-          <p class="about-description-r">Click on projects to learn more on GitHub!<br>Empty or private repo means that i didn't finished it!</p>
-          <span style="font-size: 20px;">1. <a href="https://github.com/Pazdikan/skywars">Bukkit SkyWars Plugin</a> |</span><i class="fa-brands fa-java fa-xl"></i> <i class="fa-solid fa-faucet fa-xl"></i> <i class="fa-solid fa-database fa-xl mysql"></i><br> 
-          <a href="https://github.com/Pazdikan/skywars#features">• Features:</a><br>
-          Cosmetics<br>
-          Statistics<br>
-          MySQL database<br>
-          Party system<br>
-          Achievements<br>
-          Leveling rewards<br>
-          and more...<br><br><br>
-
-          <span style="font-size: 20px;">2. <a href="https://github.com/Pazdikan/pit">Hypixel's The Pit Recreation</a> |</span><i class="fa-brands fa-java fa-xl"></i> <i class="fa-solid fa-faucet fa-xl"></i> <i class="fa-solid fa-database fa-xl mysql"></i><br> 
-          <a href="https://github.com/Pazdikan/pit#features">• Features:</a><br>
-          Leveling and prestiges<br>
-          Statistics<br>
-          MySQL database<br>
-          Custom enchants<br>
-          and more...<br>
-        </div>
-      </div>
-    </div>
-  </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"
-  ></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.9/dist/sweetalert2.all.min.js"></script>
-  <script src="index.js"></script>
-</html>
+# Rewrite in progress...
