--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-# Rewrite in progress...
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>welcome to pazdikan.party</title>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+
+  <body>
+    <div class="container">
+      <img src="logo.png" alt="Logo" />
+      <!-- <h1>welcome to pazdikan.party</h1> -->
+
+      <ul class="links">
+        <li><a onclick="showTab('socials')" href="#">socials</a></li>
+        <li><a onclick="showTab('setup')" href="#">setup</a></li>
+        <li>
+          <a href="https://github.com/Pazdikan?tab=repositories">projects</a>
+        </li>
+      </ul>
+
+      <div class="tab" id="socials">
+        <ul class="links">
+          <li><a href="https://www.youtube.com/pazdikan">youtube</a></li>
+          <li><a href="https://www.instagram.com/pazdikan">instagram</a></li>
+          <li><a href="https://www.reddit.com/u/pazdikan">reddit</a></li>
+          <li><a href="https://github.com/pazdikan">github</a></li>
+          <li>
+            <a href="https://discord.com/users/756220821508194354">discord</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="tab" id="setup">
+        <table>
+          <tbody>
+            <tr>
+              <td>cpu</td>
+              <td>ryzen 7 5700x</td>
+            </tr>
+            <tr>
+              <td>gpu</td>
+              <td>rtx 3070</td>
+            </tr>
+            <tr>
+              <td>fans</td>
+              <td>fluctus 120</td>
+            </tr>
+            <tr>
+              <td>nvme</td>
+              <td>samsung 980 1tb</td>
+            </tr>
+            <tr>
+              <td>ssd</td>
+              <td>pny 1tb</td>
+            </tr>
+            <tr>
+              <td>ssd2</td>
+              <td>pny 120gb</td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>display</td>
+              <td>gigabyte g32qc</td>
+            </tr>
+            <tr>
+              <td>mouse</td>
+              <td>aerox 5 wireless</td>
+            </tr>
+            <tr>
+              <td>homelab</td>
+              <td>rpi 4b 8gb</td>
+            </tr>
+            <tr>
+              <td>gamepad</td>
+              <td>xbox series x</td>
+            </tr>
+            <tr>
+              <td>media</td>
+              <td>chromecast 4.0 4k</td>
+            </tr>
+            <tr>
+              <td>&nbsp;</td>
+              <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>keyboard</td>
+              <td>yunzii yz75</td>
+            </tr>
+            <tr>
+              <td>switches</td>
+              <td>gat g pro yellow</td>
+            </tr>
+            <tr>
+              <td>keycaps</td>
+              <td>yunzii london</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <img src="keyboard.png" alt="keyboard" class="keyboard" />
+      </div>
+
+      <p class="spotify">
+        <a href="https://stats.fm/lmao">
+          <img
+            src="https://spotify-github-profile.vercel.app/api/view?uid=7u1ityx4k5dpz30f4mgaxnwnj&amp;cover_image=true&amp;theme=novatorem&amp;show_offline=true&amp;background_color=121212&amp;interchange=true&amp;bar_color=ffffff&amp;bar_color_cover=true"
+            alt="spotify-github-profile"
+            class="spotify-img"
+        /></a>
+      </p>
+    </div>
+  </body>
+</html>
