--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pazdikan.party" />
+    <meta property="og:title" content="pazdikan's website" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/Pazdikan/Pazdikan.github.io/master/logo.png"
+    />
+    <meta name="theme-color" content="#d40405" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/Pazdikan/Pazdikan.github.io/master/logo.png"
+    />
   </head>
 
   <body>
