404 and stats.fm

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
           <li>
             <a href="https://discord.com/users/756220821508194354">discord</a>
           </li>
+          <li>
+            <a href="https://stats.fm/lmao">stats.fm</a>
+          </li>
         </ul>
       </div>
 
