--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://pazdikan.party" />
-    <meta property="og:title" content="pazdikan's website" />
+    <meta property="og:title" content="pazdikan.party" />
+    <meta property="og:description" content="my socials and setup" />
     <meta
       property="og:image"
       content="https://raw.githubusercontent.com/Pazdikan/Pazdikan.github.io/master/logo.png"
