--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <div class="container">
-      <img src="logo.png" alt="Logo" />
+      <img src="logo.png" alt="Logo" class="logo" />
       <!-- <h1>welcome to pazdikan.party</h1> -->
 
       <ul class="links">
