--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
 
       <div class="tab" id="setup">
+        <center><h1>My budget setup:</h1></center>
         <table>
           <tbody>
             <tr>
@@ -63,10 +64,6 @@
             <tr>
               <td>gpu</td>
               <td>rtx 3070</td>
-            </tr>
-            <tr>
-              <td>fans</td>
-              <td>fluctus 120</td>
             </tr>
             <tr>
               <td>nvme</td>
@@ -83,6 +80,10 @@
             <tr>
               <td>&nbsp;</td>
               <td>&nbsp;</td>
+            </tr>
+            <tr>
+              <td>headphones</td>
+              <td>beyerdynamic dt770 pro 80ohm</td>
             </tr>
             <tr>
               <td>display</td>
